[package]
name = "comp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dssim-core = "3.1.0"
imgref = "1.6.1"
rgb = "0.8.18"
lodepng = "3.0.0"
imagequant = "4.0.2"
mozjpeg = "0.9.1"
libwebp-sys = "0.4.2"
image = { version = "0.24.0", default-features = false }
kamadak-exif = "0.5.1"
rayon = "1.3.1"
rand = "0.8.4"
lcms2 = "5.3.1"
clap = { version = "3.0.14", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.4"
tempfile = "3.1.0"